--- a/app/src/main/res/drawable/background_style.xml
+++ b/app/src/main/res/drawable/background_style.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <solid android:color="#b4d1b6"/>
+    <solid android:color="@color/app_grey_dark"/>
     <stroke
-        android:color="@color/purple"
+        android:color="@color/silver"
         android:width="2dp"/>
 
 </shape>
