--- a/app/src/main/res/layout-w900dp/estate_list.xml
+++ b/app/src/main/res/layout-w900dp/estate_list.xml
@@ -16,8 +16,7 @@
         tools:listitem="@layout/estate_list_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/background_style"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/bt_estate_list_clear_search"
@@ -27,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/rv_estate_list"
         android:layout_margin="10dp"
-        android:text="Clear search"
+        android:text="@string/clear_search"
         android:visibility="gone"
         tools:visibility="visible"/>
 
@@ -40,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/button_style">
+        android:background="@drawable/background_style">
 
     </FrameLayout>
 
