--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background_style"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@drawable/background_style">
     
 <!--    <com.google.android.material.tabs.TabLayout-->
 <!--        android:id="@+id/tb_add_tabs"-->
