--- a/app/src/main/res/layout/estate_list.xml
+++ b/app/src/main/res/layout/estate_list.xml
@@ -7,27 +7,13 @@
     android:id="@+id/cl_estate_list"
     android:tag="fragment_list">
 
-    <TextView
-        android:id="@+id/tv_estate_list_search_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Search : 0 result"
-        android:gravity="center"
-        android:textStyle="italic|bold"
-        android:textSize="25sp"
-        android:layout_margin="10dp"
-        android:visibility="gone"
-        tools:visibility="visible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/rv_estate_list"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_estate_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_estate_list_search_result"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bt_estate_list_clear_search"
         tools:listitem="@layout/estate_list_content"/>
 
@@ -39,7 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/rv_estate_list"
         android:layout_margin="10dp"
-        android:text="Clear search"
+        android:text="@string/clear_search"
         android:visibility="gone"
         tools:visibility="visible"
         android:background="@drawable/button_style"/>
