--- a/app/src/main/res/layout/estate_list_content.xml
+++ b/app/src/main/res/layout/estate_list_content.xml
@@ -47,7 +47,7 @@
         tools:text="Penthouse"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:textColor="@color/purple"
+        android:textColor="@color/gold"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_content_district"/>
@@ -59,7 +59,7 @@
         tools:text="Manhattan"
         android:textStyle="italic"
         android:textSize="20sp"
-        android:textColor="@color/purple"
+        android:textColor="@color/gold"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         tools:text="1 000 000 $"
         android:textStyle="normal"
         android:textSize="22sp"
-        android:textColor="@color/purple"
+        android:textColor="@color/gold"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
