--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -21,5 +21,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="20dp"
         android:visibility="gone"
-        android:text="Clear"/>
+        android:text="@string/clear_search"
+        android:background="@drawable/button_style"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
