--- a/app/src/main/res/layout/image_list_content.xml
+++ b/app/src/main/res/layout/image_list_content.xml
@@ -7,12 +7,12 @@
     android:layout_width="wrap_content"
     android:layout_margin="5dp"
     android:padding="3dp"
-    android:background="@color/purple">
+    android:background="@color/silver">
 
     <ImageView
         android:id="@+id/iv_content_list"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceListItem"
         android:gravity="center_horizontal"
-        android:textColor="@color/purple"
+        android:textColor="@color/gold"
         android:textSize="20sp"
         android:layout_margin="3dp"
         app:layout_constraintEnd_toEndOf="parent"
